--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-ucarp-mvip (1.0~dev8) UNRELEASED; urgency=low
+ucarp-mvip (1.0~dev9) UNRELEASED; urgency=low
 
+  [ Tero Kantonen ]
   * Initial release.
   * Fixed start-stop-deamon so it writes correct pids.
   * Refactor out ifquery usage as it required 'auto' mode interfaces.
   * Make the init script bit more debian-like.
   * Don't start the carp if vip-up is unable to parse interface details.
 
- -- Tero Kantonen <prkele@gmail.com>  Mon, 04 Nov 2013 18:26:56 +0200
+  [ Georges Toth ]
+  * make the up- and down-script configurable per VIP
+
+ -- Georges Toth <georges.toth@govcert.etat.lu>  Mon, 03 Aug 2015 13:54:08 +0200
